修改同步动作bug，添加功能按钮

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div id="main_container">
         <canvas id="main_canvas" width="700" height="400">当前浏览器不支持canvas~</canvas>
     </div>
+    <input type="button" value="重新开始" name="" id="restart">
+    <input type="button" value="开始" name="" id="start">
+    <input type="button" value="暂停" name="" id="stop">
     <div id="code_input">
 
     </div>
