--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
-<html lang="ch">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TankCode</title>
-</head>
-
-<body>
-    <div id="main_container">
-        <canvas id="main_canvas" width="700" height="400">当前浏览器不支持canvas~</canvas>
-    </div>
-    <input type="button" value="重新开始" name="" id="restart">
-    <input type="button" value="开始" name="" id="start">
-    <input type="button" value="暂停" name="" id="stop">
-    <div id="code_input">
-
-    </div>
-    <h2 id="info"></h2>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
