新增PVE模式，代码输入防抖

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ch">
+<html class="dark" lang="ch">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
